<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_player"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView25" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="98dp"
        android:layout_height="86dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/todo" />
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/seekBar"
        android:layout_below="@+id/imageView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_title"
        android:layout_below="@+id/seekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/textView4"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:text="@string/timer"
        android:id="@+id/textView2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:text="@string/duration"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:id="@+id/textView3" />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_marginLeft="10dp"
        android:id="@+id/button"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="89dp"
        android:layout_marginStart="10dp" />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:layout_marginRight="10dp"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button"
        android:layout_toRightOf="@+id/textView25"
        android:layout_toEndOf="@+id/textView25"
        android:layout_marginEnd="10dp" />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:layout_marginRight="10dp"
        android:id="@+id/button3"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@id/button"
        android:layout_alignStart="@id/button"
        android:layout_marginEnd="10dp" />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/reverse"
        android:layout_marginRight="10dp"
        android:id="@+id/button4"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@id/button2"
        android:layout_alignStart="@id/button2"
        android:layout_marginEnd="10dp" />








</RelativeLayout>